# Quiz-App-Backend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
ai/: admin.py  models.py
ai/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
app/: settings.py  urls.py
app/apis/: api_v1.py
company/apis/: api_v1.py  schema_v1.py
quiz/: admin.py  models.py
quiz/apis/: api_v1.py  schema_v1.py
quiz/migrations/: 0001_initial.py  0002_alter_multiplechoiceoption_text.py  0002_initial.py  0003_alter_multiplechoiceanswer_selected_option.py  0003_answer_unique_user_answer.py
static/: staticfiles.json
users/: admin.py  models.py
users/apis/: api_v1.py  schema_v1.py
users/migrations/: 0001_initial.py
utils/: ai.py  auth.py  email.py  misc.py
